# i-am-rockin-on

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  mise.toml
.github/workflows/: ci.yml  deploy.yml
.sqlx/: query-139ec178d0678ef36441e0e9f9364c822e618efeb12187b30cd55990c2a8b70a.json  query-221820654a9e2f5c510853b9cceaa7ae34815fb13fa1e75c0c0b6353be3dd795.json  query-2a79275caeb82e0e9a589ba7a53dd07192127e42729ed183af6d94965cfb38db.json  query-306eb50a3cf2ce98caf7972e91383a2c8783902cd695edfb74448b2ca960b642.json  query-3daa56e8ca5d964aec7b8dc738d86c701812231ff4da06b750c9fe39081f812e.json  query-630225ad859ac2276becc0fb2e0bc1e21aa0d10dd200921e476a7ce27ab41c55.json  query-6309cdabcc04fb38b2edcbeb1fb82ade3b99bda19c0539e87bf3aa2303a0810e.json  query-81353bbf73f9ef83a8437218842a6d92c93aee82a289ea667f100f4bb51e8b32.json  query-85c83b13556e33c4001afd5501e684e26997611c640945138a9f2c0e338677d1.json  query-bff196a92d627e0d5578aeef138325886e7d98c306d1832a2c0fa18bc9ff37d0.json  query-cddeccdded3440798ac3f880f720ff035180d5b25d777a20afa668b4339c8a73.json  query-d90a8d57f640e91270f82e403605a17678b23074690c091540e449de990403eb.json  query-f0008f5702e49644ece50d60690954b390051c076b472ebabf2acfb41046e64b.json  query-f0d86746961638758d1181c73d55e725ca384755020a0bdf5815ba74b86ae2ea.json  query-f9ee602586958fd1f52d05b09b6d57d8e63d138f8d055f640a1332fb02152d9c.json
docs/: TODO.md  deploy.md
docs/superpowers/plans/: 2026-05-08-music-recommendations-aggregator.md  2026-05-09-zine-redesign.md  2026-05-10-pitchfork-source-and-card-merge.md  2026-05-15-selector.md  2026-05-25-rokinon-entrylist-backfill.md  2026-06-01-funkstudy-source.md  2026-06-09-funkstudy-hashtag-labels.md
docs/superpowers/specs/: 2026-05-08-music-recommendations-aggregator-design.md  2026-05-09-zine-redesign-design.md  2026-05-10-pitchfork-source-and-card-merge-design.md  2026-05-15-hey-dj-design.md  2026-05-15-selector-design.md  2026-05-25-rokinon-entrylist-backfill-design.md  2026-06-01-funkstudy-source-design.md  2026-06-09-funkstudy-hashtag-labels-design.md
migrations/: 20260508000001_init.sql  20260525000001_scraped_entries.sql
src/: lib.rs  main.rs
src/domain/: album_card.rs  mod.rs  recommendation.rs  selector_card.rs
src/pages/: home.rs
src/server/: config.rs  error.rs  health.rs  mod.rs  scheduler.rs  scrape.rs  scrape_log.rs  store.rs
src/server/adapter/: funkstudy.rs  mod.rs  (+3 more)
style/: main.css  tailwind.css
tests/visual/: home.spec.ts  package-lock.json  package.json  playwright.config.ts  seed.sql  tsconfig.json
(+18 files in other folders)
